fix: hide Foldable menu options when button is visible (#6178)
This fixes an issue where, when using a `PageHeaderFoldable` component,
options that appear in the header always appear in the overflow menu.

--- a/webui/react/src/components/PageHeaderFoldable.module.scss
+++ b/webui/react/src/components/PageHeaderFoldable.module.scss
@@ -85,7 +85,7 @@
     display: inline-block !important;
   }
   .optionsDropdownItem:nth-child(1) {
-    display: none;
+    display: none !important;
   }
   .optionsDropdownOneChild {
     display: none !important;
@@ -97,7 +97,7 @@
     display: inline-block !important;
   }
   .optionsDropdownItem:nth-child(2) {
-    display: none;
+    display: none !important;
   }
   .optionsDropdownTwoChild {
     display: none !important;
@@ -109,7 +109,7 @@
     display: inline-block !important;
   }
   .optionsDropdownItem:nth-child(3) {
-    display: none;
+    display: none !important;
   }
   .optionsDropdownThreeChild {
     display: none !important;
